--- a/events/keyboardEvents.html
+++ b/events/keyboardEvents.html
@@ -10,6 +10,9 @@
             justify-content: center;
             margin-top: 10rem;
         }
+        div{
+            text-align: center;
+        }
 
         .keyPressed,
         .keyCode,
