--- a/advancedjs/dom/project.html
+++ b/advancedjs/dom/project.html
@@ -40,7 +40,7 @@
     </style>
   </head>
   <body>
-    <h1>Event Delegation - Preodic Table</h1>
+    <h1>Event Delegation - Periodic Table</h1>
     <section class="mainBody"></section>
     <script>
       // Function to create a periodic table element
